fixed the arrow up and down on the hero image --on mobile view

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -154,6 +154,7 @@ a:hover{
   list-style: none;
 }
 .plans{
+  display: none;
   padding-top:30px;
   height: 742px;
   background: rgba(255, 255, 255, 0.91);
